--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -34,10 +34,10 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/14/n11587544.md#1" target="_blank">【命理】凡人为学日益 修炼人为道日损 修道出神通古有传</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/14/n11587544.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/85F12409B35B4E3A-150x120.jpg" align ="left"></a>为道日损才是修道之道，损之又损，损尽所有欲望、执著才能有机会圆满。唐朝开元年间，有张、李二公，志同道合，一起在泰山学道。后来两人分道扬镳，多年后两人重逢，对比出两人不同的结局，天差地别。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 7:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/30/n11691862.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令之和</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/30/n11691862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/04d1c31ea75dc4d41caf0232c6a4653f-150x120.jpg" align ="left"></a>欢迎来到馨香雅句，我是雅兰，上期我们讲到礼记的月令，那么它当中都讲了哪些具体的内容呢？我们可以从五个方面和您来谈一谈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749380.md#1" target="_blank">真正的侠义之士</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1603221611392483-150x120.jpg" align ="left"></a>这世上，没有任何歧途，不可回头；没有任何错误，不可以改正。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753121.md#1" target="_blank">五律：彩虹</a><br></h3> 黑夜依然夜，黎明仍未明。 一命交生死，十年当死生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753300.md#1" target="_blank">歌词：我与自己有个约定</a><br></h3> 那一世我没能修成，我与自己有个约定。 等婆罗花开的时候，我要重修佛法寻圣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749650.md#1" target="_blank">唐浩：选战有道</a><br></h3>正邪搏斗争宝岛   红浪败沉一面倒   乱中有序浊恶拂   秋去春来显真道......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751526.md#1" target="_blank">台湾古典诗：题《台湾汉诗三百首》</a><br></h3>珠玉无遗遍海东，匡时鉴古继唐风， 江河不废传三百，典律先贤砥柱功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 10:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749461.md#1" target="_blank">唐浩：忧神州</a><br></h3>秋雨绵绵故绪浓   落枫片片载千愁   霾封中原惑难醒   遥望故土寒心忧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:08 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749446.md#1" target="_blank">诗歌：愁</a><br></h3>滴滴雨声落檐头 寞寞夜半梦中愁 天上人间多少盼 又有多少盼未酬......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
